Fixes for upcoming code changes.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: base32
-version: 0.0.4
-description: >
-  Base32 Encoder and Decoder
+version: 0.0.5
 author: Yulian Kuncheff <yulian@kuncheff.com>
+description: Base32 Encoder and Decoder
 homepage: https://github.com/Daegalus/dart-base32
 dependencies:
   unittest: any
