--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,10 @@
 name: base32
-version: 0.1.0
+version: 0.1.1
 author: Yulian Kuncheff <yulian@kuncheff.com>
 description: Base32 Encoder and Decoder
 homepage: https://github.com/Daegalus/dart-base32
+environment:
+  sdk: ">=0.8.10+6 <2.0.0"
 dependencies:
   unittest: ">=0.9.0 < 0.10.0"
   crypto: ">=0.9.0 < 0.10.0"
