--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,6 @@ description: Base32 Encoder and Decoder
 homepage: https://github.com/Daegalus/dart-base32
 environment:
   sdk: ">=0.8.10+6 <2.0.0"
-dependencies:
+dev_dependencies:
   unittest: ">=0.9.0 < 0.10.0"
   crypto: ">=0.9.0 < 0.10.0"
