--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Yulian Kuncheff <yulian@kuncheff.com>
 description: Base32 Encoder and Decoder
 homepage: https://github.com/Daegalus/dart-base32
 environment:
-  sdk: ">=0.8.10+6 <2.0.0"
+  sdk: ">=1.0.0 <2.0.0"
 dev_dependencies:
-  unittest: ">=0.9.0 < 0.10.0"
-  crypto: ">=0.9.0 < 0.10.0"
+  test: any
+  crypto: "<1.0.0"
