--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: base32
-version: 1.0.0
+version: 1.0.0+1
 author: Yulian Kuncheff <yulian@kuncheff.com>
-description: Base32 Encoder and Decoder
+description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
   sdk: ">=1.0.0 <2.0.0"
