Fix broken pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: base32
-version: 1.1.0
+version: 1.1.1
 author: Yulian Kuncheff <yulian@kuncheff.com>
 description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
   sdk: ">=1.0.0 <3.0.0"
-  convert: ">=2.0.0"
+dependencies:
+  convert: ">=2.0.0 <3.0.0"
 dev_dependencies:
   test: any
   pedantic: "^1.0.0"
