--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,14 @@
 name: base32
-version: 1.1.2
+version: 1.2.0-nullsafety.0
 author: Yulian Kuncheff <yulian@kuncheff.com>
 description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
-  sdk: ">=1.0.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 dependencies:
-  convert: ">=2.0.0 <3.0.0"
+  convert: ">=3.0.0-nullsafety.0"
 dev_dependencies:
-  test: any
-  pedantic: "^1.9.0"
+  pedantic: ">=1.9.0"
+  test: ^1.16.0-nullsafety
+dependency_overrides:
+  convert: ^3.0.0-nullsafety
