--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: base32
-version: 1.2.0-nullsafety.0
-author: Yulian Kuncheff <yulian@kuncheff.com>
+version: 2.0.0-nullsafety.0
 description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
   sdk: ">=2.12.0-0 <3.0.0"
 dependencies:
-  convert: ">=3.0.0-nullsafety.0"
+  convert: "^3.0.0-nullsafety"
 dev_dependencies:
   pedantic: ">=1.9.0"
   test: ^1.16.0-nullsafety
-dependency_overrides:
-  convert: ^3.0.0-nullsafety
