--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: base32
-version: 2.0.0-nullsafety.0
+version: 2.0.0-nullsafety.1
 description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
@@ -9,3 +9,10 @@ dependencies:
 dev_dependencies:
   pedantic: ">=1.9.0"
   test: ^1.16.0-nullsafety
+dependency_overrides:
+ convert: ^3.0.0-nullsafety
+ crypto:
+    git:
+      url: https://github.com/dart-lang/crypto.git
+      ref: "master"
+ logging: ^1.0.0-nullsafety
