--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 2.1.3
 description: Base32 Encoder and Decoder for Dart, primarily used for One Time Password secrets.
 homepage: https://github.com/Daegalus/dart-base32
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 dev_dependencies:
   lints: ">=1.0.1"
   test: ^1.18.2
