--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,7 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: [ master, nullsafety ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -15,7 +15,7 @@ jobs:
     # available. See https://hub.docker.com/r/google/dart/ for the available
     # images.
     container:
-      image:  google/dart:dev
+      image:  dart:beta
 
     steps:
       - uses: actions/checkout@v2
